feat(ui): implement ViewComponents factory and migrate redundant UI logic
Introduce a centralized `ViewComponents` utility to standardize UI element
creation and reduce boilerplate across view components.

- Add `ViewComponents` factory for buttons, headers, and section cards.
- Replace manual styling and component instantiation in `OnboardingView`,
  `ProfileView`, `NotificationsView`, and `GeneratorWizardView`.
- Delegate DOCX parsing to `Parser` service in `CoverLetterEditorView` and
  `HistoryView`.
- Migrate CLI output from `System.out` to `java.util.logging.Logger`.
- Refactor stream operations to use `.toList()` for improved readability.